--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
+package-lock.json
+
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+.vscode/*
+.idea
 .DS_Store
-.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
