--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
-    "jquery": "^3.7.1"
+    "jquery": "^3.7.1",
+    "three": "^0.160.0"
   }
 }
