--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^5.0.8"
   },
   "dependencies": {
+    "@vitejs/plugin-basic-ssl": "^1.1.0",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
     "three": "^0.160.0"
